# open-switch

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .markdownlint.json  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  nightly.yml  release.yml
cmake/: proto.cmake
deploy/conf/: modules.conf.xml.snippet  open_switch.conf.xml.sample
deploy/docker/: Dockerfile.builder  Dockerfile.runner  compose.yaml.example
deploy/freeswitch/conf/autoload_configs/: open_switch.conf.xml
examples/go-client/: .gitignore  go.mod  main.go
examples/runtime/: Dockerfile  README.md  docker-compose.yml  event_socket.conf.xml  modules.conf.xml  open_switch.conf.xml
examples/runtime/dialplan/: default.xml
examples/runtime/dialplan/public/: 00_osw_e2e.xml
examples/runtime/sip_profiles/: wsl.xml
include/osw/control/: active_bots.h  active_media_streams.h  auth_interceptor.h  call_cause.h  config_tls.h  idempotency_cache.h  jwt_verifier.h  originate_options.h  rbac.h  rpc_metrics.h  server.h  session_guard.h  tls.h  tls_config.h  tls_reloader.h  var_denylist.h
include/osw/control/handlers/: start_bot_handler.h  start_recording_relay_handler.h  start_stt_handler.h  start_tts_handler.h  start_voicebot_handler.h  stop_bot_handler.h  stop_media_stream_handler.h  stop_recording_relay_handler.h  unimplemented.h
include/osw/core/: config.h  config_fs.h  lifecycle.h  module.h
include/osw/events/: binder.h  envelope.h  ring.h  tier.h
include/osw/events/subscribe/: broadcaster.h  routing.h  send_queue.h  subscriber.h
include/osw/media/: audio_frame.h  bot_session.h  bug_fanout.h  bug_handle.h  bug_manager.h  purpose.h  recording_relay.h  resampler.h  silence_driver.h  stereo_pairer.h  stream_client.h  tts_playout_buffer.h
include/osw/observability/: audit.h  health.h  health_metrics.h  log.h  metrics_server.h  prometheus.h
include/osw/raii/: event_guard.h  fs_api.h  fs_mock.h  media_bug_lease.h  session_lock.h  xml_node.h
include/osw/security/: eavesdrop_app.h  eavesdrop_audit.h  eavesdrop_detector.h  eavesdrop_marker.h  eavesdrop_policy.h
openspec/: project.md
openspec/changes/core-module-v1/: FREESWITCH-FACTS.md  proposal.md  tasks.md
openspec/changes/core-module-v1/designs/: architecture.md  call-transcribe.md  event-tiers.md  media-bridge.md  memory-management.md  recording-with-bot.md  security-and-eavesdrop.md  (+1 more)
proto/: buf.gen.yaml  buf.yaml
src/: CMakeLists.txt  mod_open_switch.cc
src/control/: CMakeLists.txt  active_bots.cc  active_media_streams.cc  auth_interceptor.cc  call_cause.cc  config_tls.cc  control_service_skeleton.h  idempotency_cache.cc  jwt_verifier.cc  originate_options.cc  rbac.cc  rpc_metrics.cc  server.cc  session_guard.cc  tls.cc  tls_reloader.cc  var_denylist.cc
src/control/handlers/: blind_transfer_handler.cc  bridge_handler.cc  execute_handler.cc  hangup_handler.cc  hangup_many_handler.cc  health_handler.cc  hold_handler.cc  idempotency_utils.h  media_bug_callbacks.cc  media_bug_callbacks.h  media_rate.h  originate_handler.cc  set_variables_handler.cc  start_bot_handler.cc  start_recording_relay_handler.cc  start_stt_handler.cc  start_tts_handler.cc  start_voicebot_handler.cc  stop_bot_handler.cc  stop_media_stream_handler.cc  stop_recording_relay_handler.cc  subscribe_events_handler.cc  subscribe_events_stub.cc  unhold_handler.cc  unimplemented.cc
src/core/: CMakeLists.txt  config.cc  config_fs.cc  lifecycle.cc  module.cc
src/events/: CMakeLists.txt  binder.cc  envelope.cc  ring.cc  ring_set.cc  tier.cc
src/events/subscribe/: broadcaster.cc  routing.cc  send_queue.cc  subscriber.cc
src/media/: CMakeLists.txt  audio_frame.cc  bot_session.cc  bug_fanout.cc  bug_handle.cc  bug_manager.cc  purpose.cc  recording_relay.cc  resampler.cc  silence_driver.cc  stereo_pairer.cc  stream_client.cc  tts_playout_buffer.cc
src/observability/: CMakeLists.txt  audit.cc  health.cc  health_metrics.cc  log.cc  log_default_sink.cc  metrics_server.cc  prometheus.cc
src/security/: CMakeLists.txt  eavesdrop_app.cc  eavesdrop_audit.cc  eavesdrop_detector.cc  eavesdrop_marker.cc  eavesdrop_policy.cc
tests/: CMakeLists.txt  tsan.supp
tests/integration/: CMakeLists.txt  w7_media_flow_integration_test.cc
tests/support/: media_bridge_harness.h
tests/unit/: CMakeLists.txt
tests/unit/control/: CMakeLists.txt  active_bots_test.cc  active_media_streams_test.cc  auth_interceptor_test.cc  blind_transfer_handler_test.cc  bridge_handler_test.cc  call_cause_test.cc  execute_handler_test.cc  hangup_handler_test.cc  hangup_many_handler_test.cc  hold_handler_test.cc  idempotency_cache_test.cc  jwt_verifier_test.cc  media_bug_callbacks_test.cc  originate_handler_test.cc  rbac_test.cc  rpc_metrics_test.cc  server_test.cc  set_variables_handler_test.cc  start_bot_handler_test.cc  start_recording_relay_handler_test.cc  start_stt_handler_test.cc  start_tts_handler_test.cc  start_voicebot_handler_test.cc  stop_bot_handler_test.cc  stop_media_stream_handler_test.cc  stop_recording_relay_handler_test.cc  tls_test.cc  unhold_handler_test.cc
tests/unit/core/: CMakeLists.txt  config_test.cc  lifecycle_test.cc
tests/unit/events/: CMakeLists.txt  binder_test.cc  broadcaster_test.cc  envelope_decode_for_test.h  envelope_test.cc  ring_test.cc  subscribe_replay_test.cc  tier_test.cc
tests/unit/media/: CMakeLists.txt  audio_frame_test.cc  bot_session_test.cc  bug_fanout_test.cc  bug_manager_test.cc  recording_relay_test.cc  resampler_test.cc  silence_driver_test.cc  stereo_pairer_test.cc  stream_client_test.cc  tts_playout_buffer_test.cc
tests/unit/observability/: CMakeLists.txt  audit_test.cc  health_test.cc  log_test.cc  metrics_http_wiring_test.cc  metrics_server_test.cc  prometheus_test.cc
tests/unit/raii/: CMakeLists.txt  README.md  event_guard_test.cc  media_bug_lease_test.cc  session_lock_test.cc  xml_node_test.cc
tests/unit/security/: CMakeLists.txt  eavesdrop_app_test.cc  eavesdrop_detector_test.cc  eavesdrop_marker_test.cc  eavesdrop_policy_test.cc
tests/valgrind/: freeswitch.supp
(+43 files in other folders)
